--- a/package.json
+++ b/package.json
@@ -17,5 +17,15 @@
     "bibtex-parser-js": "0.0.2",
     "lodash": "^4.0.0"
   },
-  "scripts": {}
+  "scripts": {
+    "lint": "eslint .",
+    "lint-fix": "eslint --fix ."
+  },
+  "devDependencies": {
+    "eslint": "^7.26.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1"
+  }
 }
